# ircbot

./: .gitignore  Base.hs  Bot.hs  IRC.hs  Irc.hs  Macros.hs  Modules.hs  README  Stats.hs  hBot.hs  ircbot.cabal
IRC/: Base.hs  Commands.hs  Parser.hs
Network/: IRC.hs
Network/IRC/: Base.hs
src/: Base.hs  Bot.hs  Irc.hs  Main.hs  Modules.hs
src/Bot/: Auth.hs  Base.hs  Database.hs  IRC.hs  Modules.hs  Sasl.hs
src/Bot/Modules/: Admin.hs
src/Modules/: Echo.hs
src/Network/: Bot.hs  IRC.hs
src/Network/Bot/: Base.hs  Commands.hs  Irc.hs  Modules.hs
src/Network/Bot/Modules/: Echo.hs
src/Network/IRC/: Base.hs  Commands.hs  Decoder.hs  Encoder.hs
src/Network/IRC/Commands/: Mode.hs
