Name:           ircbot
Version:        0.0.0
Synopsis:       A simple ircbot written in haskell
Author:         Simon Gomizelj
Maintainer:     Simon Gomizelj <simongmzlj@gmail.com>
Build-type:     Simple
Cabal-version:  >=1.2

Executable bot
  Hs-source-dirs: src
  Main-is: Main.hs
  Build-depends:
    base -any,
    mtl -any,
    network -any,
    time -any,
    bytestring -any,
    attoparsec -any,
    HDBC -any,
    HDBC-sqlite3 -any
